src/objects/loan__Fee__c.object
<CustomObject>
    <description>Fee</description>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <description>Number or % 
Amount, is a flat amount. For other fee calculation methods, this is a % amount.</description>
        <inlineHelpText>Number or % 
Amount, is a flat amount. For other fee calculation methods, this is a % amount.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>loan__Bank__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Currency</description>
        <inlineHelpText>Currency</inlineHelpText>
        <label>Currency</label>
        <referenceTo>loan__Currency__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Default_fees__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Calculation_Method__c</fullName>
        <description>Fee Calculation Method</description>
        <inlineHelpText>Fee Calculation Method</inlineHelpText>
        <label>Fee Calculation Method</label>
        <picklist>
            <controllingField>loan__Fee_Category__c</controllingField>
            <picklistValues>
                <fullName>Amount calculated as % of loan amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % of loan payoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % of payment amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % of principal balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % of disbursement amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Category__c</fullName>
        <description>Fee Category</description>
        <label>Fee Category</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee Income Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>30000 - INCOME</value>
            </filterItems>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field determines the %age of a fee payment of this fee type that is distributed to investors in case of a fractionalized loan.</inlineHelpText>
        <label>Investor Share (%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Maintenance_Fee_s_Frequency__c</fullName>
        <label>Maintenance Fee&apos;s Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_Amount__c</fullName>
        <label>Maximum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_Days_Past_Due_On_Contract__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Maximum Days Past Due On Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Days_Past_Due_On_Contract__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Days Past Due On Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__N_A_In_Case_Of_Uncleared_Transactions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A In Case Of Uncleared Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Refundable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refundable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Suspended_Fee_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspended Fee Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please select a master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Fees (Suspended Fee Account)</relationshipLabel>
        <relationshipName>Fees_SFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Time_of_charge__c</fullName>
        <description>Time of charge</description>
        <inlineHelpText>Time of charge</inlineHelpText>
        <label>Time of charge</label>
        <picklist>
            <controllingField>loan__Fee_Category__c</controllingField>
            <picklistValues>
                <fullName>Late Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Off Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodic Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amortized Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time of Disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Paid Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Fee_Income__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee Income GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Investor_Share_Percentage_Limit</fullName>
        <active>true</active>
        <description>Investor Share Percentage can only be between 0 to 100 %. And not beyond 100 %.</description>
        <errorConditionFormula>OR(
   loan__Investor_Share__c &gt; 100.0,
   loan__Investor_Share__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>loan__Investor_Share__c</errorDisplayField>
        <errorMessage>Investor Share Percentage can only be between 0 to 100 %.</errorMessage>
    </validationRules>
</CustomObject>